...

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infoics"
                android:gravity="center"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ICS"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/quotaics"
                    android:textColor="@color/neros"
                    android:background="@color/trasp"
                    android:onClick="effettuaScommessa"
                    android:fontFamily="@font/cr"
                    android:textSize="25dp"
                    >
...
                    android:layout_weight="1"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ncrediti"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:layout_centerHorizontal="true"
                        android:background="@color/nerocc"
                        android:textColor="@color/neros"
                        android:text="IMP"
...

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scommetti"
                android:layout_marginTop="10dp"
                android:background="@color/violas"
                android:text="VINCI"
                android:textSize="25dp"
                android:layout_below="@id/togliere"
                android:onClick="scommetti"
...

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/voce1a"
                android:onClick="passasezione"
                android:background="@drawable/gioca"
                >

            </ImageView>


        </RelativeLayout>
...
