...
                android:background="@drawable/pulsantimenu"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="passasezione"
                    android:id="@+id/gioca0"
                    android:layout_centerInParent="true"
                    >
                <Button
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/gioca"
                    android:alpha="0.5"
                    android:onClick="passasezione"
                    android:id="@+id/butpa"
                    >
                </Button>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
